Issue 7097: Use valueOf() instead of creating a new instance